--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -21,6 +21,7 @@ docutils==0.21.2
     # via
     #   pybtex-docutils
     #   sphinx
+    #   sphinx-rtd-theme
     #   sphinxcontrib-bibtex
 idna==3.10
     # via requests
@@ -55,7 +56,11 @@ snowballstemmer==3.0.1
 sphinx==8.2.3
     # via
     #   -r requirements.in
+    #   sphinx-rtd-theme
     #   sphinxcontrib-bibtex
+    #   sphinxcontrib-jquery
+sphinx-rtd-theme==3.0.2
+    # via -r requirements.in
 sphinxcontrib-applehelp==2.0.0
     # via sphinx
 sphinxcontrib-bibtex==2.6.3
@@ -64,6 +69,8 @@ sphinxcontrib-devhelp==2.0.0
     # via sphinx
 sphinxcontrib-htmlhelp==2.1.0
     # via sphinx
+sphinxcontrib-jquery==4.1
+    # via sphinx-rtd-theme
 sphinxcontrib-jsmath==1.0.1
     # via sphinx
 sphinxcontrib-qthelp==2.0.0
